Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -60,7 +60,7 @@
    "outputs": [],
    "source": [
     "def three_x_y_at_one(x):\n",
-    "    return 3*1\n",
+    "    return 3*i\n",
     "\n",
     "def three_x_y_at_three(x):\n",
     "    pass\n",
