Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -61,7 +61,7 @@
     "    return 3*x*1\n",
     "\n",
     "def three_x_y_at_three(x):\n",
-    "    re\n",
+    "    return 3\n",
     "\n",
     "def three_x_y_at_six(x):\n",
     "    pass\n",
@@ -87,7 +87,10 @@
     }
    ],
    "source": [
-    "three_x_y_at_one(3) # 9\n"
+    "three_x_y_at_one(3) # 9\n",
+    "three_x_y_at_three(3)# 27\n",
+    "three_x_y_at_six(1) # 18\n",
+    "three_x_y_at_six(2) # 36"
    ]
   },
   {
