Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
     "    return 3*x*6\n",
     "\n",
     "def three_x_y_at_nine(x):\n",
-    "    return"
+    "    return 3*x*9"
    ]
   },
   {
