--- a/index.ipynb
+++ b/index.ipynb
@@ -112,7 +112,7 @@
     "zero_to_four = list(range(0, 5))\n",
     "\n",
     "def y_values_for_at_one(x_values):\n",
-    "    return list(map(lambda value: three_x_y_at_one(value)))\n",
+    "    return list(map(lambda value: three_x_y_at_one(value), x_values))\n",
     "\n",
     "def y_values_for_at_three(x_values):\n",
     "    pass\n",
