Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -102,11 +102,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 3, 6, 9, 12, 15, 18, 21, 24, 27, 30]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "zero_to_ten = list(range(0, 11))\n",
     "zero_to_four = list(range(0, 5))\n",
@@ -114,7 +123,7 @@
     "def y_values_for_at_one(x_values):\n",
     "    return list(map(lambda value: three_x_y_at_one(value), x_values))\n",
     "\n",
-    "y_values_for_at_one"
+    "y_values_for_at_one(zero_to_ten)"
    ]
   },
   {
