Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -127,10 +127,9 @@
     "    return list(map(lambda value: three_x_y_at_three(value), x_values))\n",
     "\n",
     "def y_values_for_at_six(x_values):\n",
-    "    return list(map(lambda value: three_x_y_at_one(value), x_values))\n",
+    "    return list(map(lambda value: three_x_y_at_six(value), x_values))\n",
     "\n",
-    "def y_values_for_at_nine(x_values):\n",
-    "    pass"
+    "    return list(map(lambda value: three_x_y_at_one(value), x_values))"
    ]
   },
   {
