--- a/index.ipynb
+++ b/index.ipynb
@@ -130,7 +130,7 @@
     "    return list(map(lambda value: three_x_y_at_six(value), x_values))\n",
     "\n",
     "def y_values_for_at_nine(x_values):\n",
-    "    pass"
+    "    return list(map(lambda value: three_x_y_at_nine(value), x_values))"
    ]
   },
   {
