Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -242,7 +242,7 @@
     "    \"data\": [y_at_one_trace, y_at_three_trace, y_at_six_trace, y_at_nine_trace],\n",
     "    \"layout\": Layout(title=\"constants with linear functions\")\n",
     "}\n",
-    "plotly.offline.iplot([y_at_one_trace])"
+    "plotly.offline.iplot(y_at_one_trace])"
    ]
   },
   {
