Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -243,7 +243,20 @@
     "    \"layout\": Layout(title=\"constants with linear functions\")\n",
     "}\n",
     "plotly.offline.iplot([y_at_one_trace])\n",
-    "\n"
+    "\n",
+    "\n",
+    "import plotly\n",
+    "from plotly.graph_objs import Scatter, Layout\n",
+    "from plotly.offline import init_notebook_mode, iplot\n",
+    "from IPython.display import display, HTML\n",
+    "\n",
+    "init_notebook_mode(connected=True)\n",
+    "\n",
+    "fig_constants_lin_functions = {\n",
+    "    \"data\": [y_at_one_trace, y_at_three_trace, y_at_six_trace, y_at_nine_trace],\n",
+    "    \"layout\": Layout(title=\"constants with linear functions\")\n",
+    "}\n",
+    "plotly.offline.iplot(fig_constants_lin_functions)"
    ]
   },
   {
