Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -322,7 +322,7 @@
    "outputs": [],
    "source": [
     "def df_dx_when_y_equals_one():\n",
-    "    return 3*x*1"
+    "    return 3"
    ]
   },
   {
@@ -334,7 +334,7 @@
    "outputs": [],
    "source": [
     "def df_dx_when_y_equals_three():\n",
-    "    pass"
+    "    return"
    ]
   },
   {
