Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -334,7 +334,7 @@
    "outputs": [],
    "source": [
     "def df_dx_when_y_equals_three():\n",
-    "    return"
+    "    return 9"
    ]
   },
   {
