--- a/index.ipynb
+++ b/index.ipynb
@@ -322,7 +322,7 @@
    "outputs": [],
    "source": [
     "def df_dx_when_y_equals_one():\n",
-    "    return 3"
+    "    return 3*1"
    ]
   },
   {
@@ -334,7 +334,7 @@
    "outputs": [],
    "source": [
     "def df_dx_when_y_equals_three():\n",
-    "    return 9"
+    "    return 3*3"
    ]
   },
   {
@@ -346,7 +346,7 @@
    "outputs": [],
    "source": [
     "def df_dx_when_y_equals_six():\n",
-    "    return"
+    "    return 3"
    ]
   },
   {
