Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -346,7 +346,7 @@
    "outputs": [],
    "source": [
     "def df_dx_when_y_equals_six():\n",
-    "    return 3"
+    "    return 3*6"
    ]
   },
   {
@@ -358,7 +358,7 @@
    "outputs": [],
    "source": [
     "def df_dx_when_y_equals_nine():\n",
-    "    pass"
+    "    return 3*9"
    ]
   },
   {
