Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -369,7 +369,7 @@
    "outputs": [],
    "source": [
     "def df_dx_3xy(x_value, y_value):\n",
-    "    pass"
+    "    return list(map(lambda value: three_x_y_at_one(value), x_values))"
    ]
   },
   {
