Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -369,7 +369,8 @@
    "outputs": [],
    "source": [
     "def df_dx_3xy(x_value, y_value):\n",
-    "    return list(map(lambda value: three_x_y_at_one(value), x_values))"
+    "def df_dx_3xy(x_value, y_value):\n",
+    "    return 3*y_value"
    ]
   },
   {
