Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -501,7 +501,7 @@
    "outputs": [],
    "source": [
     "def multivariable_output_at(list_of_terms, x_value, y_value):\n",
-    "    pass"
+    "    outputs = list"
    ]
   },
   {
