Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -501,7 +501,15 @@
    "outputs": [],
    "source": [
     "def multivariable_output_at(list_of_terms, x_value, y_value):\n",
-    "    outputs = list(map(lambda term: output_at(term,  list_of_terms)"
+    "def multivariable_output_at(list_of_terms, x_value, y_value):\n",
+    "    output = []\n",
+    "    for term in list_of_terms:\n",
+    "        constant = term[0]\n",
+    "        x_exponent = term[1]\n",
+    "        y_exponent = term[2]\n",
+    "        term_output = constant*x_value**x_exponent*y_value**y_exponent\n",
+    "        output.append(term_output)\n",
+    "    return sum(output)"
    ]
   },
   {
