Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -621,7 +621,10 @@
    "outputs": [],
    "source": [
     "def term_df_dx(term):\n",
-    "    return "
+    "def term_df_dx(term):\n",
+    "    constant = term[0]*term[1]\n",
+    "    exponent = term[1] - 1\n",
+    "    return (constant, exponent,term[2])"
    ]
   },
   {
