Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -734,7 +734,10 @@
    "outputs": [],
    "source": [
     "def term_df_dy(term):\n",
-    "    pass"
+    "\n",
+    "    constant = term[0]*term[2]\n",
+    "    exponent = term[2] - 1\n",
+    "    return (constant, term[1], exponent)"
    ]
   },
   {
