Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -875,7 +875,8 @@
    "outputs": [],
    "source": [
     "def df_dy(list_of_terms):\n",
-    "    pass"
+    "    derivative_terms = list(map(lambda function_term: term_df_dy(function_term),list_of_terms))\n",
+    "    return list(filter(lambda derivative_term: derivative_term[0] > 0, derivative_terms))"
    ]
   },
   {
